--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "hardhat": "2.0.6",
     "hardhat-deploy": "0.7.4",
     "hardhat-deploy-ethers": "0.3.0-beta.7",
+    "mongodb": "^4.7.0",
     "solc": "0.7.4"
   },
   "devDependencies": {
