--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "hardhat-deploy": "0.7.4",
     "hardhat-deploy-ethers": "0.3.0-beta.7",
     "mongodb": "^4.7.0",
+    "mongoose": "^6.4.0",
     "solc": "0.7.4"
   },
   "devDependencies": {
